# Fit4CybersecurityStats

./: .gitignore  Makefile  README.md  app.json  generate_html.py  generate_markdown.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver.py
fit4cybersecuritystats/: bootstrap.py  charts.py  fetcher.py  fetchers.py  main.py  runserver.py
fit4cybersecuritystats/static/: charts.js
fit4cybersecuritystats/templates/: base.html  index.html  stats.html
fit4cybersecuritystats/templates/html/: index.html
fit4cybersecuritystats/templates/markdown/: survey_per_company_sector.md
fit4cybersecuritystats/templates/web/: base.html  index.html  js.html  stats.html
instance/: heroku.py  production.py
